proxima-macros/tests/ui/span_on_const_fn.stderr
error: #[span] cannot be applied to const fn
 --> tests/ui/span_on_const_fn.rs:5:1
  |
5 | const fn bad() -> u32 {
  | ^^^^^
